--- a/wiz_demo/PartA.html
+++ b/wiz_demo/PartA.html
@@ -139,6 +139,7 @@
                         </div>
                     </div>
                 </div>
+                <p><a class="more" target="_blank" href="https://drive.google.com/file/d/1osGiNTI0WB69wU52ndReJRP5Kes5h2Gi/view?usp=sharing">click to see more materials</a></p>
             </div>
             <!-- detect check-worthy claims -->
             <div class="idea">
@@ -244,6 +245,7 @@
                         </div>
                     </div>
                 </div>
+                <p><a class="more" target="_blank" href="https://drive.google.com/file/d/1osGiNTI0WB69wU52ndReJRP5Kes5h2Gi/view?usp=sharing">click to see more materials</a></p>
             </div>
             <!-- generate article briefs -->
             <div class="idea">
@@ -323,7 +325,7 @@
                                         <div class="prototype">
                                             <iframe id="iframe-generate-article-briefs"
                                                 src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=1594202430&range=A1:A3"
-                                                width="400px" height="250px" frameborder="0"></iframe>
+                                                width="400px" height="350px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-generate-article-briefs">refresh</button>
                                             <p class="help">Please click refresh if there is no output</p>
@@ -338,6 +340,7 @@
                         </div>
                     </div>
                 </div>
+                <p><a class="more" target="_blank" href="https://drive.google.com/file/d/1osGiNTI0WB69wU52ndReJRP5Kes5h2Gi/view?usp=sharing">click to see more materials</a></p>
             </div>
             <!-- robocheck -->
             <div class="idea">
@@ -365,14 +368,13 @@
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
-                                            <p>Tiger Woods is serving a suspension from the PGA Tour after failing a
-                                                drug test</p>
+                                            <p>The Biden administration “is spending $30 million on crack pipes.</p>
                                         </a>
                                         <a class="example">
-                                            <p>There is a case of Ebola in Kansas City</p>
+                                            <p>In England, official data shows children are up to 52 times more likely to die following COVID-19 vaccination than unvaccinated children.</p>
                                         </a>
                                         <a class="example">
-                                            <p>A 5-year-old boy was invoiced for missing a birthday parthy</p>
+                                            <p>Joe Biden uses the ATF to illegally track your gun transactions.</p>
                                         </a>
                                     </div>
                                 </div>
@@ -417,7 +419,7 @@
                                     <div class="field-content">
                                         <div class="prototype">
                                             <iframe id="iframe-robocheck"
-                                                src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=683514345&range=A1:B8"
+                                                src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=683514345&range=A1:C7"
                                                 width="500px" height="350px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-robocheck">refresh</button>
@@ -433,6 +435,7 @@
                         </div>
                     </div>
                 </div>
+                <p><a class="more" target="_blank" href="https://drive.google.com/file/d/1osGiNTI0WB69wU52ndReJRP5Kes5h2Gi/view?usp=sharing">click to see more materials</a></p>
             </div>
 
         </div>
