--- a/wiz_demo/widget.html
+++ b/wiz_demo/widget.html
@@ -219,7 +219,7 @@
                                         <p>
                                             <a class="deleteLastTask"><i class="fas fa-trash-alt"></i> delete the last
                                                 task</a>
-                                            <a class="resetTask"><i class="fas fa-redo-alt"></i> reset tasks</a>
+                                            <a class="resetTask"><i class="fas fa-redo-alt"></i> reset all tasks</a>
                                         </p>
                                     </div>
                                 </div>
