--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <ul>
-            <li><a href="wiz_demo/client.html">client's webpage</a></li>
+            <li><a href="wiz_demo/home.html">client's webpage</a></li>
             <li><a href="widget/tool.html">co-design widget</a></li>
         </ul>
     </div>
