--- a/wiz_demo/home.html
+++ b/wiz_demo/home.html
@@ -75,6 +75,9 @@
                                                 placed
                                                 on those who have opted not to get the jab."</p>
                                         </a>
+                                        <a class="example">
+                                            Politicians around the world are denying that their actions are devaluing the currencies. They aren’t going to stop until it’s far too late. Protect yourself and buy some bitcoin.
+                                        </a>
                                     </div>
                                 </div>
                             </div>
