--- a/wiz_demo/home.html
+++ b/wiz_demo/home.html
@@ -24,13 +24,15 @@
                     </a>
                 </div>
                 <div class="navbar-end">
-                    <a class="navbar-item" target="_blank" href="https://drive.google.com/file/d/1osGiNTI0WB69wU52ndReJRP5Kes5h2Gi/view?usp=sharing"><br />Additional materials</a>
+                    <a class="navbar-item" target="_blank"
+                        href="https://drive.google.com/file/d/1osGiNTI0WB69wU52ndReJRP5Kes5h2Gi/view?usp=sharing"><br />Additional
+                        materials</a>
                 </div>
             </div>
             <div class="desc">
                 <p>Inspired by existing research papers that have applied natural language processing (NLP) to assist
                     human fact-checking, we present following ideas. Each idea is displayed with a text-based diagram
-                    and a real-time prototype. Please read the diagram description to understand the basic components 
+                    and a real-time prototype. Please read the diagram description to understand the basic components
                     of an NLP idea and explore the prototype to make sense of its implementations.</p>
             </div>
         </div>
@@ -76,7 +78,9 @@
                                                 on those who have opted not to get the jab."</p>
                                         </a>
                                         <a class="example">
-                                            Politicians around the world are denying that their actions are devaluing the currencies. They aren’t going to stop until it’s far too late. Protect yourself and buy some bitcoin.
+                                            <p>"Politicians around the world are denying that their actions are
+                                                devaluing the currencies. They aren’t going to stop until it’s far too
+                                                late. Protect yourself and buy some bitcoin."</p>
                                         </a>
                                     </div>
                                 </div>
@@ -643,7 +647,8 @@
                                             <p>The Biden administration “is spending $30 million on crack pipes.</p>
                                         </a>
                                         <a class="example">
-                                            <p>In England, official data shows children are up to 52 times more likely to die following COVID-19 vaccination than unvaccinated children.</p>
+                                            <p>In England, official data shows children are up to 52 times more likely
+                                                to die following COVID-19 vaccination than unvaccinated children.</p>
                                         </a>
                                         <a class="example">
                                             <p>Joe Biden uses the ATF to illegally track your gun transactions.</p>
