--- a/wiz_demo/home.html
+++ b/wiz_demo/home.html
@@ -378,6 +378,11 @@
                                                 placed
                                                 on those who have opted not to get the jab."</p>
                                         </a>
+                                        <a class="example">
+                                            <p>"Politicians around the world are denying that their actions are
+                                                devaluing the currencies. They aren’t going to stop until it’s far too
+                                                late. Protect yourself and buy some bitcoin."</p>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
