--- a/wiz_demo/home.html
+++ b/wiz_demo/home.html
@@ -270,11 +270,10 @@
                                                 told you about, a caliphate."</p>
                                         </a>
                                         <a class="example">
-                                            <p>"Austria is expecting to declare nationwide lockdown of
-                                                unvaccinated people,
-                                                in what would be the broadest restrictions that any country has yet
-                                                placed
-                                                on those who have opted not to get the jab."</p>
+                                            <p>"CBS placed casting calls for participants on November 14, 2012 .
+                                                Auditions were held between December 1 and December 15, 2012. The
+                                                competition took place at the Gibbs Gardens in Ball Ground , Georgia in
+                                                March 2013."</p>
                                         </a>
                                         <a class="example">
                                             <p>"Politicians around the world are denying that their actions are
