--- a/wiz_demo/home.html
+++ b/wiz_demo/home.html
@@ -219,7 +219,7 @@
                                     <div class="field-content">
                                         <div class="prototype">
                                             <iframe id="iframe-checkworthy-claim"
-                                                src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=823408266&range=A1:C24"
+                                                src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=823408266&range=A1:D24"
                                                 width="430px" height="560px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-checkworthy-claim">refresh</button>
