--- a/wiz_demo/home.html
+++ b/wiz_demo/home.html
@@ -61,14 +61,7 @@
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
-                                            <p>"We told you this week how if Mubarak does step down,
-                                                however, the Muslim
-                                                Brotherhood would be the most likely group to seize power. They’ve
-                                                openly
-                                                stated they want to declare war on Israel and they would end the peace
-                                                agreement with Israel and they would work towards instituting something
-                                                we
-                                                told you about, a caliphate."</p>
+                                            <p>"Every Bitcoin cycle in history has ended with a red month followed by 2 or 3 very green months."</p>
                                         </a>
                                         <a class="example">
                                             <p>"Austria is expecting to declare nationwide lockdown of
@@ -144,7 +137,7 @@
             <!-- detect check-worthy claims -->
             <div class="idea">
                 <div class="idea-top">
-                    <h4 class="title is-5">2. Detect check-worthy claims on social media</h4>
+                    <h4 class="title is-5">2. Identify the check-worthiness of a social media claim</h4>
                     <div class="image"><img src="image/Detect check-worthy claims on social media@2x.png" alt=""></div>
                 </div>
                 <h3 class="title is-6">Prototype</h3>
@@ -260,16 +253,6 @@
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
-                                            <p>"We told you this week how if Mubarak does step down,
-                                                however, the Muslim
-                                                Brotherhood would be the most likely group to seize power. They've
-                                                openly
-                                                stated they want to declare war on Israel and they would end the peace
-                                                agreement with Israel and they would work towards instituting something
-                                                we
-                                                told you about, a caliphate."</p>
-                                        </a>
-                                        <a class="example">
                                             <p>"CBS placed casting calls for participants on November 14, 2012 .
                                                 Auditions were held between December 1 and December 15, 2012. The
                                                 competition took place at the Gibbs Gardens in Ball Ground , Georgia in
@@ -361,15 +344,6 @@
                                             placeholder="Please enter paragraphs or select one example below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
-                                        <a class="example">
-                                            <p>"People in the Muslim Brotherhood openly stated they want to declare
-                                                war
-                                                on Israel and they would end the peace agreement with Israel and
-                                                they
-                                                would work towards instituting something we told you about, a
-                                                caliphate."
-                                            </p>
-                                        </a>
                                         <a class="example">
                                             <p>"Austria is expecting to declare nationwide lockdown of
                                                 unvaccinated people,
