--- a/demo/home.html
+++ b/demo/home.html
@@ -801,7 +801,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>This is a research prototype, only used for the workshop of co-designing NLP solutions to assist human
-                fact-checkers. Designed by Houjiang Liu. <br> This webpage is under a <a
+                fact-checkers. <br> This webpage is under a <a
                     href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA license</a>
             </p>
         </div>
